--- a/index.html
+++ b/index.html
@@ -3,62 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Signup & Signin</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <title>Document</title>
+    <script src="script2.js" defer type="module"></script>
+    <link rel="stylesheet" href="style2.css" />
   </head>
   <body>
-    <div class="container" id="signup-container">
-      <h2>Sign Up</h2>
-      <div class="form-group">
-        <label>Email</label>
-        <input type="email" required />
-      </div>
-      <div class="form-group">
-        <label>Password</label>
-        <input type="password" required />
-      </div>
-      <button class="btn">Sign Up</button>
-      <div class="switch">
-        Already have an account? <a onclick="showSignin()">Sign In</a>
-      </div>
-    </div>
+    <div id="regestration">
+      <form id="signup" style="display: none;">
+        <h2>Sign Up</h2>
+        <br />
+        <label for="mail" >Email: </label><br />
+        <input type="email" id="mail" required/><br /><br>
+        <label for="pass">Password: </label><br>
 
-    <div class="container" id="signin-container" style="display: none">
-      <h2>Sign In</h2>
-      <div class="form-group">
-        <label>Email</label>
-        <input id="email" type="email" required />
-      </div>
-      <div class="form-group">
-        <label>Password</label>
-        <input id="pass" type="password" required />
-      </div>
-      <button class="btn">Sign In</button>
-      <div class="switch">
-        <a onclick="showForgotPassword()">Forgot Password?</a>
-      </div>
-      <div class="switch">
-        Don't have an account? <a onclick="showSignup()">Sign Up</a>
-      </div>
-    </div>
+        <input type="password"  id="pass"required/><br><br>
+        <button id="btn_signup" type="submit">Sign Up</button>
+      </form>
+      <form id="signin">
+        <h2>Sign In</h2>
+        <label for="mail1">Email: </label><br />
+        <input type="email" id="mail1" required /><br /><br>
+        <label for="pass1">Password: </label><br>
 
-    <div class="container" id="forgot-password-container" style="display: none">
-      <h2>Reset Password</h2>
-      <div class="form-group">
-        <label>Current Password</label>
-        <input type="password" required />
-      </div>
-      <div class="form-group">
-        <label>New Password</label>
-        <input type="password" required />
-      </div>
-      <button class="btn">Reset Password</button>
-      <div class="switch">
-        <a onclick="showSignin()">Back to Sign In</a>
-      </div>
-    </div>
+        <input  type="password"  id="pass1" required /><br><br>
+        <a href="" onclick="forgot()">Forgot Password</a><br><br>
+        <button id="btn_signin" type="submit">Sign In</button>
+        <button id="btn_guest">Guest Mode</button>
+      </form>
+      <form id="forgot" style="display: none;">
+        <h2>Forgot Password</h2>
+        <label for="mail2">Enter New Password:  </label><br />
+        <input type="email" id="mail2"/><br /><br>
+        <label for="pass2">Re-Enter Password: </label><br>
 
-    
+        <input type="password"  id="pass2"/><br><br>
+        <button type="submit">Change Password</button>
+        
+      </form><br>
+      <button id="alrd" style="display: none;">Already Have An Account.?</button><br>
+      <button id="dhac">Don't Have An Accocunt</button>
+    </div>
   </body>
 </html>
