some items details added

--- a/home.html
+++ b/home.html
@@ -222,7 +222,7 @@
 
       let btn_dum_b=document.getElementById("btn-dum-b");
       btn_dum_b.addEventListener("click",()=>{
-        location.assign("Hyd_Chicken_b.html")
+        location.assign("Chicken_dum_b.html")
       })
       let btn_kolkatta_b=document.getElementById("btn-kolkatta-b");
       btn_kolkatta_b.addEventListener("click",()=>{
@@ -231,21 +231,21 @@
 
       let btn_chicken_cu= document.getElementById("btn-chicken-cu");
       btn_chicken_cu.addEventListener("click",()=>{
-        location.assign("Kolkatta_chi_b.html")
+        location.assign("Chicken_curry.html")
       })
 
       let btn_fish_cu= document.getElementById("btn-fish-cu");
       btn_fish_cu.addEventListener("click",()=>{
-        location.assign("Kolkatta_chi_b.html")
+        location.assign("Fish_Curry.html")
       })
       let btn_mutton_cu= document.getElementById("btn-mutton-cu");
       btn_mutton_cu.addEventListener("click",()=>{
-        location.assign("Kolkatta_chi_b.html")
+        location.assign("Mutton_Curry.html")
       })
 
       let btn_mutton_b= document.getElementById("btn-mutton-b");
       btn_mutton_b.addEventListener("click",()=>{
-        location.assign("Kolkatta_chi_b.html")
+        location.assign("Mutton_Biryani.html")
       })
       
 
