button Functionality Added

--- a/home.html
+++ b/home.html
@@ -187,28 +187,28 @@
           Mushroom Curry
         </h5>
         <img src="./images/mashroom curry.jpg" alt="" id="img" />
-        <button class="btn-nonveg" id="btn-dum-b">click here</button>
+        <button class="btn-nonveg" id="btn-mushroom-cu">click here</button>
       </div>
       <div class="non-veg">
         <h5 style="text-align: center; font-family: 'Poppins', sans-serif">
           Mushroom Fry
         </h5>
         <img src="./images/mashrrom fry.jpg" alt="" id="img" />
-        <button class="btn-nonveg" id="btn-hyd-dum-b">click here</button>
+        <button class="btn-nonveg" id="btn-mushroom_fry">click here</button>
       </div>
       <div class="non-veg">
         <h5 style="text-align: center; font-family: 'Poppins', sans-serif">
           Paneer Butter Masala
         </h5>
         <img src="./images/paneer-butter-masala.jpg" alt="" id="img" />
-        <button class="btn-nonveg" id="btn-kolkatta-b">click here</button>
+        <button class="btn-nonveg" id="btn-paneer_masala">click here</button>
       </div>
       <div class="non-veg">
         <h5 style="text-align: center; font-family: 'Poppins', sans-serif">
           Paneer Tikka
         </h5>
         <img src="./images/paneer tikka.jpg" alt="" id="img" />
-        <button class="btn-nonveg" id="btn-chicken-cu">click here</button>
+        <button class="btn-nonveg" id="btn-paneer-tikk">click here</button>
       </div>
     </div>
     <div id="copyright">
@@ -248,6 +248,25 @@
         location.assign("Mutton_Biryani.html")
       })
       
+      let btn_mushroom_cu= document.getElementById("btn-mushroom-cu");
+      btn_mushroom_cu.addEventListener("click",()=>{
+        location.assign("Mushrrom_Curry.html")
+      })
+
+      let btn_mushroom_fry= document.getElementById("btn-mushroom_fry");
+      btn_mushroom_fry.addEventListener("click",()=>{
+        location.assign("Mushroom_Fry.html")
+      })
+
+      let btn_paneer_masala= document.getElementById("btn-paneer_masala");
+      btn_paneer_masala.addEventListener("click",()=>{
+        location.assign("paneer_bt_masala.html")
+      })
+
+      let btn_paneer_tikk= document.getElementById("btn-paneer-tikk");
+      btn_paneer_tikk.addEventListener("click",()=>{
+        location.assign("Paneer_Tikka.html")
+      })
 
 
     </script>
