--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
               <a class="nav-link active" aria-current="page" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Logout</a>
+              <a class="nav-link" href="index.html">Logout</a>
             </li>
             <li class="nav-item dropdown">
               <a
