--- a/Chicken_curry.html
+++ b/Chicken_curry.html
@@ -106,6 +106,9 @@
   margin-top: 20px;
         
       }
+      #btn:active{
+transform: scale(1.2);
+      }
       @media (max-width: 480px) {
         #image {
           height: 50%;
