--- a/Mutton_Biryani.html
+++ b/Mutton_Biryani.html
@@ -128,7 +128,7 @@
         }
         #ingredients-div {
           height: 50%;
-          width: 60%;
+          width: 85%;
           border: 2px solid;
           border-radius: 10px;
 
@@ -141,6 +141,12 @@
           box-shadow: 0 0 10px;
           border: none;
           color: rgb(85, 14, 29);
+        }
+        #nutrition-div{
+          width: 80%;
+        }
+        #making_process-div{
+          width: 80%;
         }
       }
     </style>
