loading effect added to back to home button

--- a/Chicken_curry.html
+++ b/Chicken_curry.html
@@ -175,7 +175,7 @@ transform: scale(1.2);
 
     <script>
       let btn=addEventListener("click",()=>{
-location.assign("home.html")
+location.assign("loading_to_home.html")
       })
       let data = fetch("https://679ba48e33d3168463249d82.mockapi.io/items");
       data
