some effects added

--- a/home.html
+++ b/home.html
@@ -43,7 +43,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Logout</a>
+              <a class="nav-link" href="messege.html">Contact Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Log out</a>
             </li>
             <li class="nav-item dropdown">
               <a
