new changes added

--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
             <li class="nav-item">
               <a class="nav-link" href="messege.html">Contact Us</a>
             </li>
-            <button id="favourite_btn">Favourites</button>
+            <button id="fev_div_button">Favourites</button>
             <li class="nav-item">
               <a class="nav-link" href="index.html">Log out</a>
             </li>
@@ -396,7 +396,7 @@
         
 
         let side_bar=document.getElementById("side_bar");
-        let favourite_btn=document.getElementById("favourite_btn")
+        let favourite_btn=document.getElementById("fev_div_button")
         let close_btn=document.getElementById("btn_close")
         let btn_remove1=document.getElementById("btn_remove1");
         let fev_div1=document.getElementById("fev_div1")
