some changes added

--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
             <li class="nav-item">
               <a class="nav-link" href="index.html">Log out</a>
             </li>
-            <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
@@ -67,7 +67,7 @@
 
                 <li><a class="dropdown-item" href="#">Veg</a></li>
               </ul>
-            </li>
+            </li> -->
           </ul>
           <input type="text" id="searchBox" placeholder="Search here..." onkeyup="search()">
     <div id="results"></div>
@@ -76,7 +76,7 @@
       </div>
     </nav>
     <div id="side_bar" >
-      <button id="btn_close">close</button><br>
+      <button id="btn_close">X</button><br>
       <div class="fev_div" id="fev_div1">
         <h4>Hyd Chicken B</h4>
         
@@ -187,7 +187,7 @@
           Hyderabad Chicken Dum Biryani
         </h5>
         <img src="./images/hyd dum b.jpg" alt="" id="img" />
-        <button class="btn-nonveg" id="btn-Hyd-dum-b">click here</button>
+        <button class="btn-nonveg" id="btn-Hyd-dum-b">For More</button>
         <button id="btn_add1" class="add_to_c">❤</button>
       </div>
       <div class="non-veg">
@@ -195,7 +195,7 @@
           Dum Chicken Biryani
         </h5>
         <img src="./images/dum b.jpg" alt="" id="img" />
-        <button class="btn-nonveg" id="btn-dum-b">click here</button>
+        <button class="btn-nonveg" id="btn-dum-b">For More</button>
         <button id="btn_add2" class="add_to_c">❤</button>
       </div>
       <div class="non-veg">
@@ -203,7 +203,7 @@
           Kolkata Chicken Biryani
         </h5>
         <img src="./images/kolkatha b.jpg" alt="" id="img" />
-        <button class="btn-nonveg" id="btn-kolkatta-b">click here</button>
+        <button class="btn-nonveg" id="btn-kolkatta-b">For More</button>
         <button id="btn_add3" class="add_to_c">❤</button>
       </div>
       <div class="non-veg">
@@ -211,7 +211,7 @@
           Chicken Curry
         </h5>
         <img src="./images/chicken curry.jpg" alt="" id="img" />
-        <button class="btn-nonveg" id="btn-chicken-cu">click here</button>
+        <button class="btn-nonveg" id="btn-chicken-cu">For More</button>
         <button id="btn_add4" class="add_to_c">❤</button>
       </div>
       <div class="non-veg">
@@ -219,7 +219,7 @@
           Fish Curry
         </h5>
         <img src="./images/fish curry.jpg" alt="" id="img" />
-        <button class="btn-nonveg" id="btn-fish-cu">click here</button>
+        <button class="btn-nonveg" id="btn-fish-cu">For More</button>
         <button id="btn_add5" class="add_to_c">❤</button>
       </div>
       <div class="non-veg">
@@ -227,7 +227,7 @@
           Mutton Curry
         </h5>
         <img src="./images/mutton curry.jpg" alt="" id="img" />
-        <button class="btn-nonveg" id="btn-mutton-cu">click here</button>
+        <button class="btn-nonveg" id="btn-mutton-cu">For More</button>
         <button id="btn_add6" class="add_to_c">❤</button>
       </div>
       <div class="non-veg">
@@ -235,7 +235,7 @@
           Mutton Biryani
         </h5>
         <img src="./images/mutton-biryani.jpg" alt="" id="img" />
-        <button class="btn-nonveg" id="btn-mutton-b">click here</button>
+        <button class="btn-nonveg" id="btn-mutton-b">For More</button>
         <button id="btn_add7" class="add_to_c">❤</button>
       </div>
     </div>
@@ -256,7 +256,7 @@
           Mushroom Curry
         </h5>
         <img src="./images/mashroom curry.jpg" alt="" id="img" />
-        <button class="btn-nonveg" id="btn-mushroom-cu">click here</button>
+        <button class="btn-nonveg" id="btn-mushroom-cu">For More</button>
         <button id="btn_add8" class="add_to_c">❤</button>
       </div>
       <div class="non-veg">
@@ -264,7 +264,7 @@
           Mushroom Fry
         </h5>
         <img src="./images/mashrrom fry.jpg" alt="" id="img" />
-        <button class="btn-nonveg" id="btn-mushroom_fry">click here</button>
+        <button class="btn-nonveg" id="btn-mushroom_fry">For More</button>
         <button id="btn_add9" class="add_to_c">❤</button>
       </div>
       <div class="non-veg">
@@ -272,7 +272,7 @@
           Paneer Butter Masala
         </h5>
         <img src="./images/paneer-butter-masala.jpg" alt="" id="img" />
-        <button class="btn-nonveg" id="btn-paneer_masala">click here</button>
+        <button class="btn-nonveg" id="btn-paneer_masala">For More</button>
         <button id="btn_add10" class="add_to_c">❤</button>
       </div>
       <div class="non-veg">
@@ -280,7 +280,7 @@
           Paneer Tikka
         </h5>
         <img src="./images/paneer tikka.jpg" alt="" id="img" />
-        <button class="btn-nonveg" id="btn-paneer-tikk">click here</button>
+        <button class="btn-nonveg" id="btn-paneer-tikk">For More</button>
         <button id="btn_add11" class="add_to_c">❤</button>
       </div>
     </div>
