--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style2.css" />
   </head>
   <body>
+    <h2 id="logo">Recipe App</h2>
     <div id="regestration">
       <form id="signup" style="display: none;">
         <h2>Sign Up</h2>
