image size decreases

--- a/home.html
+++ b/home.html
@@ -486,37 +486,48 @@ btn_remove11.addEventListener("click",()=>{
 fev_div11.style.display="none";
 });
 btn_add1.addEventListener("click",()=>{
-  fev_div1.style.display="inline-block"
+  fev_div1.style.display="inline-block";
+  alert("Added Successfully")
 })
 btn_add2.addEventListener("click",()=>{
-  fev_div2.style.display="inline-block"
+  fev_div2.style.display="inline-block";
+  alert("Added Successfully")
 })
 btn_add3.addEventListener("click",()=>{
-  fev_div3.style.display="inline-block"
+  fev_div3.style.display="inline-block";
+  alert("Added Successfully")
 })
 btn_add4.addEventListener("click",()=>{
-  fev_div4.style.display="inline-block"
+  fev_div4.style.display="inline-block";
+  alert("Added Successfully")
 })
 btn_add5.addEventListener("click",()=>{
-  fev_div5.style.display="inline-block"
+  fev_div5.style.display="inline-block";
+  alert("Added Successfully")
 })
 btn_add6.addEventListener("click",()=>{
-  fev_div6.style.display="inline-block"
+  fev_div6.style.display="inline-block";
+  alert("Added Successfully")
 })
 btn_add7.addEventListener("click",()=>{
-  fev_div7.style.display="inline-block"
+  fev_div7.style.display="inline-block";
+  alert("Added Successfully")
 })
 btn_add8.addEventListener("click",()=>{
-  fev_div8.style.display="inline-block"
+  fev_div8.style.display="inline-block";
+  alert("Added Successfully")
 })
 btn_add9.addEventListener("click",()=>{
-  fev_div9.style.display="inline-block"
+  fev_div9.style.display="inline-block";
+  alert("Added Successfully")
 })
 btn_add10.addEventListener("click",()=>{
-  fev_div10.style.display="inline-block"
+  fev_div10.style.display="inline-block";
+  alert("Added Successfully")
 })
 btn_add11.addEventListener("click",()=>{
-  fev_div11.style.display="inline-block"
+  fev_div11.style.display="inline-block";
+  alert("Added Successfully")
 })
 
 
