--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
   <body>
     
   </div>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navv">
       <div class="container-fluid">
         <a class="navbar-brand" href="#" style="color: #d2691e">Recipe App</a>
         <button
